Fixes for 1. Message in web-service 2. Error icon in project dialog when reached 25 projects 3. Group by icon alignment

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1704,10 +1704,8 @@ body.modal-open {
   position: relative;
   .icon {
     display: inline-block;
-    .width-height(16px, 16px);
-    margin-right: 8px;
-    vertical-align: top;
-    font-size: 16px;
+    font-size: 11px;
+    margin-right: 5px;
   }
   span {
     vertical-align: text-top;
